# trowel

./: Cargo.toml
client/: Cargo.toml
client/src/: lib.rs  main.rs
main/: Cargo.toml
main/src/: main.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  ws_client.rs
shared/: Cargo.toml
shared/src/: lib.rs  ws_message.rs
src/: client.rs  main.rs  server.rs
src/client/: main.rs
src/server/: main.rs  mod.rs  ws_client.rs
src/shared/: ws_message.rs
