[package]
name = "trowel"
version = "0.1.0"
edition = "2021"
authors = ["Kaporos"]
description = "Trowel is a chisel clone written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.30", features = ["derive"] }
color-eyre = "0.6"
log = "0.4.17"
pretty_env_logger = "0.4.0"
tokio = { version = "1", features = ["full"] }
