[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client = {path = "../client"}
server = {path = "../server"}
clap = { version = "4.0.30", features = ["derive"] }
color-eyre = "0.6"
log = "0.4.17"
pretty_env_logger = "0.4.0"
tokio = { version = "1", features = ["full"] }
