[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.30", features = ["derive"] }
color-eyre = "0.6"
deku = "0.15.1"
futures-util = "0.3.25"
http-body-util = "0.1.0-rc.1" 
hyper = { version = "0.14.23", features = ["full"] }
hyper-tungstenite = "0.9.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
